--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           </div>
         </div>
       </section>
-      <!-- End Resume Section -->
+      <!-- End Education Section -->
 
       <!-- ======= Experience Section ======= -->
       <section id="portfolio" class="portfolio section-bg">
@@ -448,7 +448,7 @@
           </div>
         </div>
       </section>
-      <!-- End Portfolio Section -->
+      <!-- End Experience Section -->
 
       <!-- ======= Interest Section ======= -->
       <section id="services" class="services">
@@ -502,7 +502,7 @@
           </div>
         </div>
       </section>
-      <!-- End Services Section -->
+      <!-- End Interest Section -->
 
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
