--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                      <span>25</span>
+                      <span>26</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -273,7 +273,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Illustrator <i class="val">70%</i></span>
+                <span class="skill">Illustrator <i class="val">50%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -286,7 +286,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Photoshop <i class="val">55%</i></span>
+                <span class="skill">Photoshop <i class="val">65%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -341,7 +341,7 @@
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
                 <li data-filter=".filter-app">Landing Page</li>
-                <li data-filter=".filter-card">Photo</li>
+                <li data-filter=".filter-card">Projects</li>
               </ul>
             </div>
           </div>
@@ -354,16 +354,16 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/Screenshot 2023-03-16 121802.png"
+                  src="assets/img/portfolio/Artboard 1.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/Screenshot 2023-03-16 121802.png"
+                    href="assets/img/portfolio/Artboard 1.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Landing Pages"
+                    title="Landing Pages Liburan"
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -373,16 +373,34 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/Screenshot 2023-03-16 184526.png"
+                  src="assets/img/portfolio/Artboard 2.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/Screenshot 2023-03-16 184526.png"
+                    href="assets/img/portfolio/Artboard 2.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Landing Pages"
+                    title="Landing Pages Tempat Memesan Kopi"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/Artboard 4.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/Artboard 4.png"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Landing Pages Cashier Payment"
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -392,16 +410,16 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/Screenshot 2023-03-16 185635.png"
+                  src="assets/img/portfolio/Artboard 3.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/Screenshot 2023-03-16 185635.png"
+                    href="assets/img/portfolio/Artboard 3.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Landscape Photography"
+                    title="Projects Pembuatan Aplikasi Kalkulator Menggunakan HTML, CSS, JavaScript"
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -411,35 +429,16 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/Screenshot 2023-03-16 190015.png"
+                  src="assets/img/portfolio/Artboard 6.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/Screenshot 2023-03-16 190015.png"
+                    href="assets/img/portfolio/Artboard 6.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Black And White"
-                    ><i class="bx bx-plus"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/Screenshot 2023-03-16 190344.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
-                  <a
-                    href="assets/img/portfolio/Screenshot 2023-03-16 190344.png"
-                    data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"
-                    title="Human Interests"
+                    title="Pembuatan Score Board"
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
